# nextenv

./: Cargo.toml  README.md  rustfmt.toml
examples/: .env  .env.development  .env.development.local  .env.local  .env.production
src/: main.rs
tests/: test_acceptance.rs
