[package]
name = "nextenv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
dotenv = "0.15.0"

[profile.release]
strip = true
lto = true
opt-level = "z"  # Optimize for size.

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
